--- a/nasy-theme.org
+++ b/nasy-theme.org
@@ -40,15 +40,30 @@ Nasy's Theme
     :group 'nasy-theme
     :type '(list symbol))
 
-  (defcustom nasy-theme-fixed-pitch-font "OperatorMonoSSmLig Nerd Font"
-    "Nasy them fixed pitch font."
+  (defcustom nasy-theme-fixed-pitch-font "Recursive Mono Casual Static"
+    "Nasy theme fixed pitch font."
     :group 'nasy-theme
     :type 'string)
 
-  (defcustom nasy-theme-variable-pitch-font "Recursive Mono Casual Static"
-    "Nasy them variable patch font."
+  (defcustom nasy-theme-variable-pitch-font "Cardo"
+    "Nasy theme variable patch font."
     :group 'nasy-theme
     :type 'string)
+
+  (defcustom nasy-theme-fixed-pitch-font-scale 1.0
+    "Nasy theme fixed pitch font scale."
+    :group 'nasy-theme
+    :type 'float)
+
+  (defcustom nasy-theme-variable-pitch-font-scale 1.3
+    "Nasy theme variable pitch font scale."
+    :group 'nasy-theme
+    :type 'float)
+
+  (defcustom nasy-theme-rescale-f/v-pitch-font t
+    "Nasy theme rescale f/v-pitch-font or not."
+    :group 'nasy-theme
+    :type 'boolean)
 
   (defun nasy-theme--light?dark (light dark)
     "Determine using the LIGHT or the DARK color of nasy-theme."
@@ -69,6 +84,22 @@ Nasy's Theme
     (when (memq sym nasy-theme-underlines-list)
       t))
   (defalias '--u? #'nasy-theme--check-underline-list)
+
+  (defun nasy-theme--rescale-font ()
+    "Nasy theme rescale font."
+    (when nasy-theme-rescale-f/v-pitch-font
+      (setf (alist-get
+             nasy-theme-fixed-pitch-font
+             face-font-rescale-alist
+             nasy-theme-fixed-pitch-font-scale nil 'string=)
+            nasy-theme-fixed-pitch-font-scale)
+      (setf (alist-get
+             nasy-theme-variable-pitch-font
+             face-font-rescale-alist
+             nasy-theme-variable-pitch-font-scale nil 'string=)
+            nasy-theme-variable-pitch-font-scale)))
+
+  (nasy-theme--rescale-font)
 #+end_src
 
 * Theme
@@ -82,6 +113,7 @@ Nasy's Theme
          (n-墨     "#50616D")
          (n-墨灰   "#758A99")
          (n-富春紡 "#FEF4B4")
+         (n-長萅蕐 "#FF47D1")
          (n-春緑   "#E3EFD1")
          (n-松绿   "#057748")
          (n-松花   "#BCE672")
@@ -92,6 +124,7 @@ Nasy's Theme
          (n-牙     "#EEDEB0")
          (n-米灰   "#D3CBAF")
          (n-紙棕   "#D2B38C")
+         (n-珈琲椶 "#705438")
          (n-素     "#E0F0E9")
          (n-缟     "#F2ECDE")
          (n-胡粉   "#FFFAE8")
@@ -138,9 +171,7 @@ Nasy's Theme
      `(error           ((,class (:background ,n-鱼肚 :foreground ,n-品红 :weight bold))))
      `(escape-glyph    ((,class (:foreground ,n-茶))))
      `(fixed-pitch
-       ((,class (:font ,(font-spec :name nasy-theme-fixed-pitch-font
-                                   :weight 'normal
-                                   :slant 'normal)))))
+       ((,class (:family ,nasy-theme-fixed-pitch-font))))
      `(fringe          ((,class (:background ,n/缟漆 :foreground ,n/墨缟))))
      `(header-line     ((,class (:background ,n-荼
                                              :box (:line-width 2 :style released-button)
@@ -156,9 +187,7 @@ Nasy's Theme
        ((,class (:background ,n-富春紡))))
      `(success      ((,class (:background ,n-鱼肚 :foreground ,n-靛青 :weight bold))))
      `(variable-pitch
-       ((,class (:font ,(font-spec :name nasy-theme-variable-pitch-font
-                                   :weight 'normal
-                                   :slant 'normal)))))
+       ((,class (:family ,nasy-theme-variable-pitch-font))))
      `(warning      ((,class (:background ,n-鱼肚 :foreground ,n-茶 :weight bold))))
 
      ;;; company
@@ -263,7 +292,7 @@ Nasy's Theme
 
      ;;; font-lock faces
      `(font-lock-builtin-face
-       ((,class (:background ,n/霜黛 :foreground ,n-松绿 :slant italic))))
+       ((,class (:background ,n-春緑 :foreground ,n-珈琲椶 :slant italic))))
      `(font-lock-comment-delimiter-face
        ((,class (:inherit font-lock-comment-face :weight bold))))
      `(font-lock-comment-face
@@ -273,13 +302,13 @@ Nasy's Theme
      `(font-lock-constant-face
        ((,class (:inherit font-lock-variable-name-face :weight bold))))
      `(font-lock-doc-face
-       ((,class (:background ,n/素墨 :foreground ,n/靛青湖蓝 :extend t))))
+       ((,class (:background ,n-水黄 :foreground ,n/靛青湖蓝 :extend t))))
      `(font-lock-function-name-face
        ((,class (:foreground ,n-松绿 :underline t))))
      `(font-lock-keyword-face
        ((,class (:foreground ,n/墨缟 :weight bold))))
      `(font-lock-negation-char-face
-       ((,class (:background ,n/牙黛 :foreground ,n/青莲牙))))
+       ((,class (:foreground ,n-珈琲椶))))
      `(font-lock-string-face
        ((,class (:foreground ,n/靛青湖蓝))))
      `(font-lock-type-face
@@ -297,7 +326,7 @@ Nasy's Theme
        ((,class (:background ,n-春緑))))
      ;; hl-line
      `(hl-line ((,class (:background ,n-芽灰
-                                     :distant-foreground ,n-缟
+                                     :distant-foreground ,n-墨
                                      :extend t
                                      :underline ,(--u? 'hl-line)
                                      :weight bold))))
@@ -330,11 +359,6 @@ Nasy's Theme
      `(mode-line          ((,class (:background ,n-胡粉))))
      `(mode-line-inactive ((,class (:background ,n-素))))
 
-     ;;; tab bar mode
-     `(tab-bar                ((t (:inherit mode-line))))
-     `(tab-bar-tab            ((t (:inherit mode-line))))
-     `(tab-bar-tab-inactive   ((t (:inherit mode-line-inactive))))
-
      ;;; org mode
      `(org-block
        ((,class (:background ,n-蠟白 :foreground ,n/墨缟 :extend t))))
@@ -346,10 +370,10 @@ Nasy's Theme
                              :weight bold
                              :slant italic))))
      `(org-document-title
-       ((,class (:background ,n/素墨
-                             :extend t
+       ((,class (:background ,n-富春紡
+                             :extend nil
                              :foreground ,n/墨缟
-                             :height ,(--s? 1.4)
+                             :height ,(--s? 1.7)
                              :weight bold))))
      `(org-document-info
        ((,class (:background ,n/素墨
@@ -369,26 +393,26 @@ Nasy's Theme
      `(org-headline-done
        ((,class (:underline (:color ,n-松花)))))
      `(org-level-1
-       ((,class (:background ,n/素墨
+       ((,class (:background ,n-蠟白
                              :extend t
                              :foreground ,n-靛青
                              :height ,(--s? 1.4)
                              :underline t
                              :weight bold))))
      `(org-level-2
-       ((,class (:background ,n/素墨
+       ((,class (:background ,n-蠟白
                              :extend t
                              :foreground ,n-茶
                              :height ,(--s? 1.2)
                              :weight bold))))
      `(org-level-3
-       ((,class (:background ,n/素墨
+       ((,class (:background ,n-蠟白
                              :extend t
                              :foreground ,n-松绿
                              :height ,(--s? 1.1)
                              :weight bold))))
      `(org-level-4
-       ((,class (:background ,n/素墨
+       ((,class (:background ,n-蠟白
                              :extend t
                              :foreground ,n/青莲丁香
                              :height ,(--s? 1.1)
@@ -429,15 +453,37 @@ Nasy's Theme
                              :box t
                              :foreground ,n/墨缟
                              :slant normal
+                             :underline nil
                              :weight bold))))
 
      ;;; page break lines
      `(page-break-lines
        ((,class (:inherit font-lock-comment-face :slant normal :underline nil))))
 
+     ;;; tab bar mode
+     `(tab-bar                ((t (:inherit mode-line))))
+     `(tab-bar-tab            ((t (:inherit mode-line))))
+     `(tab-bar-tab-inactive   ((t (:inherit mode-line-inactive))))
+
+     ;;; term
+     `(term-color-black   ((,class (:background ,n-墨     :foreground ,n-墨))))
+     `(term-color-blue    ((,class (:background ,n-靛青   :foreground ,n-靛青))))
+     `(term-color-cyan    ((,class (:background ,n-湖蓝   :foreground ,n-湖蓝))))
+     `(term-color-green   ((,class (:background ,n-松绿   :foreground ,n-松绿))))
+     `(term-color-magenta ((,class (:background ,n-長萅蕐 :foreground ,n-長萅蕐))))
+     `(term-color-red     ((,class (:background ,n-火红   :foreground ,n-火红))))
+     `(term-color-white   ((,class (:background ,n-缟     :foreground ,n-缟))))
+     `(term-color-yellow  ((,class (:background ,n-紙棕   :foreground ,n-紙棕))))
+     `(vterm-color-inverse-video
+       ((,class (:background ,n-墨))))
+
      ;;; tree sitter
+     `(tree-sitter-hl-face:constructor
+       ((,class (:inherit tree-sitter-hl-face:type :bold nil))))
+     `(tree-sitter-hl-face:property
+       ((,class (:inherit font-lock-constant-face :bold nil))))
      `(tree-sitter-hl-face:operator
-       ((,class (:inherit font-lock-negation-char-face))))))
+       ((,class (:background ,n-蠟白 :bold t :inherit font-lock-negation-char-face))))))
 
   ;;;###autoload
   (and load-file-name
