--- a/readme.org
+++ b/readme.org
@@ -393,28 +393,28 @@
        :emacs>= 24.5
        :leaf-defer nil
        :custom ((ivy-initial-inputs-alist . nil)
-                (ivy-use-selectable-prompt . t))
+		(ivy-use-selectable-prompt . t))
        :global-minor-mode t
        :config
        (leaf swiper
-         :doc "Isearch with an overview. Oh, man!"
-         :req "emacs-24.5" "ivy-0.13.0"
-         :tag "matching" "emacs>=24.5"
-         :url "https://github.com/abo-abo/swiper"
-         :emacs>= 24.5
-         :bind (("C-s" . swiper)))
+	 :doc "Isearch with an overview. Oh, man!"
+	 :req "emacs-24.5" "ivy-0.13.0"
+	 :tag "matching" "emacs>=24.5"
+	 :url "https://github.com/abo-abo/swiper"
+	 :emacs>= 24.5
+	 :bind (("C-s" . swiper)))
 
        (leaf counsel
-         :doc "Various completion functions using Ivy"
-         :req "emacs-24.5" "swiper-0.13.0"
-         :tag "tools" "matching" "convenience" "emacs>=24.5"
-         :url "https://github.com/abo-abo/swiper"
-         :emacs>= 24.5
-         :bind (("C-S-s" . counsel-imenu)
-                ("C-x C-r" . counsel-recentf))
-         :custom `((counsel-yank-pop-separator . "\n----------\n")
-                   (counsel-find-file-ignore-regexp . ,(rx-to-string '(or "./" "../") 'no-group)))
-         :global-minor-mode t))
+	 :doc "Various completion functions using Ivy"
+	 :req "emacs-24.5" "swiper-0.13.0"
+	 :tag "tools" "matching" "convenience" "emacs>=24.5"
+	 :url "https://github.com/abo-abo/swiper"
+	 :emacs>= 24.5
+	 :bind (("C-S-s" . counsel-imenu)
+		("C-x C-r" . counsel-recentf))
+	 :custom `((counsel-yank-pop-separator . "\n----------\n")
+		   (counsel-find-file-ignore-regexp . ,(rx-to-string '(or "./" "../") 'no-group)))
+	 :global-minor-mode t))
 
      (leaf ivy-posframe
        :hook (ivy-mode-hook)
@@ -429,6 +429,14 @@
        :global-minor-mode t)
    #+end_src
 
+** Selectrum
+   #+begin_src emacs-lisp
+     ;; (straight-use-package 'selectrum)
+     ;; 
+     ;; (leaf selectrum
+     ;;   :config
+     ;;   (selectrum-mode +1))
+   #+end_src
 ** Company
    #+begin_src emacs-lisp
      (straight-use-package 'company)
@@ -477,6 +485,49 @@
      (straight-use-package 'telega)
    #+end_src
 
+** Emacs-Rime
+   #+begin_src emacs-lisp
+     (straight-use-package 'rime)
+
+     (leaf rime
+       :doc "RIME ㄓ in Emacs"
+       :url "https://github.com/DogLooksGood/emacs-rime"
+       :tag "convenience" "input-method"
+       :bind
+       (:rime-mode-map
+	("C-`"   . rime-send-keybinding)
+	("C-S-`" . rime-send-keybinding)
+	("C-,"   . rime-send-keybinding))
+       (:rime-active-mode-map
+	("C-;"   . rime-send-keybinding)
+	("C-SPC" . rime-send-keybinding))
+       :custom
+       `(rime-emacs-module-header-root    . ,(expand-file-name "/opt/local/include"))
+       `(rime-user-data-dir   . ,(expand-file-name "~/.config/rime"))
+       `(rime-librime-root    . ,(expand-file-name "/opt/local"))
+       (rime-candidate-labels .'("〡" "〢" "〣" "〤" "〥" "〦" "〧" "〨" "〩"))
+       (default-input-method  . "rime")
+       (rime-cursor           . "˰")
+       (rime-show-candidate   . 'posframe)
+       (rime-posframe-style   . 'vertical)
+       (rime-show-preedit     . t)
+       (rime-translate-keybindings
+	. '("C-f"
+	    "C-b"
+	    "C-n"
+	    "C-p"
+	    "C-g"
+	    "C-`"
+	    "C-;"
+	    "C-SPC"
+	    "<left>"
+	    "<right>"
+	    "<up>"
+	    "<down>"
+	    "<prior>"
+	    "<next>"
+	    "<delete>")))
+   #+end_src
 ** Exec-path-from-shell
    #+begin_src emacs-lisp
      (straight-use-package 'exec-path-from-shell)
