--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 #+title: 我的 Emacs 配置文件
 #+author: keke
 #+email: librek@protonmail.com
-#+date: <2021-04-24 Sat>
+#+date: <2021-04-27 Tue>
 #+export_file_name: ~/Repos/keke-cute.github.io/emacs.html
 #+options: creator:t author:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="me.css" /> <a href="index.html">Back To Home</a>
@@ -35,13 +35,23 @@
   #+begin_src emacs-lisp
     ;;;###autoload
     (if (fboundp 'with-eval-after-load)
-        (defalias 'after-x 'with-eval-after-load)
+	(defalias 'after-x 'with-eval-after-load)
       (defmacro after-x (feature &rest body)
-        "Eval BODY afetr FEATURE have loaded."
-        (declare (indent defun))
-        `(eval-after-load ,feature
-           '(progn ,@body))))
-    (defalias 'gsetq-local #'general-setq-local)
+	"Eval BODY afetr FEATURE have loaded."
+	(declare (indent defun))
+	`(eval-after-load ,feature
+	   '(progn ,@body))))
+
+    (straight-use-package 'general)
+    (leaf general
+      :doc "More convenient key definitions in emacs."
+      :url "https://github.com/noctuid/general.el"
+      :require t
+      :commands gsetq gsetq-local gsetq-default
+      :init
+      (defalias 'gsetq #'general-setq)
+      (defalias 'gsetq-local #'general-setq-local)
+      (defalias 'gsetq-default #'general-setq-default))
   #+end_src
 
 * 检测系统
@@ -254,7 +264,7 @@
 	:defun doom-modeline-def-segment
 	:custom
 	((doom-modeline-height                      . 25)
-	 (doom-modeline-bar-width                   . 3)
+	 (doom-modeline-bar-width                   . 5)
 	 (doom-modeline-window-width-limit          . fill-column)
 	 (doom-modeline-project-detection           . 'project)  ;; changed
 	 (doom-modeline-buffer-file-name-style      . 'auto)
@@ -340,11 +350,126 @@
 	(page-break-lines-char . ?⊸))
 
       (leaf dashboard
+	:commands dashboard-setup-startup-hook
+	:preface
+	(defun nasy/wfw1 (&rest _)
+	  "Widget forward 1."
+	  (interactive)
+	  (widget-forward 1))
+	(defun nasy/fw2 (&rest _)
+	  "Forward 2 chars."
+	  (interactive "p")
+	  (forward-char 2))
+	(defun nasy/-recentf (&rest _)
+	  (interactive)
+	  (counsel-recentf))
+	(defun nasy/-bookmarks (&rest _)
+	  (interactive)
+	  (bookmark-jump))
+	(defun nasy/-projects (&rest _)
+	  (interactive)
+	  (counsel-projectile-switch-project))
+	(defun nasy/-dashboard-items (list-size)
+	  (insert "\n")
+	  (insert "🌓 ")
+	  (widget-create 'item
+			 :tag "Recent Files (r)"
+			 :action #'nasy/-recentf
+			 :mouse-face 'highlight
+			 :button-face 'dashboard-heading
+			 :button-prefix ""
+			 :button-suffix ""
+			 :format "%[%t%]")
+	  (insert "\n\n")
+	  (insert "📚")
+	  (insert " ")
+	  (widget-create 'item
+			 :tag "Bookmarks (b)"
+			 :action #'nasy/-bookmarks
+			 :mouse-face 'highlight
+			 :button-face 'dashboard-heading
+			 :button-prefix ""
+			 :button-suffix ""
+			 :format "%[%t%]")
+	  (insert "\n\n")
+	  (insert "🚀 ")
+	  (widget-create 'item
+			 :tag "Projects (p)"
+			 :action #'nasy/-projects
+			 :mouse-face 'highlight
+			 :button-face 'dashboard-heading
+			 :button-prefix ""
+			 :button-suffix ""
+			 :format "%[%t%]")
+	  (insert "\n"))
+	:bind
+	("<f5>" . dashboard-refresh-buffer)
+	(:dashboard-mode-map
+	 ("r"              . counsel-recentf)
+	 ("p"              . counsel-projectile-switch-project)
+	 ("b"              . counsel-bookmark)
+	 ("g"              . dashboard-refresh-buffer)
+	 ("<down-mouse-1>" . nil)
+	 ("H-p"            . dashboard-previous-line)
+	 ("H-n"            . dashboard-next-line)
+	 ("H-b"            . widget-backward)
+	 ("H-f"            . widget-forward)
+	 ("<mouse-1>"      . widget-button-click)
+	 ("<mouse-2>"      . widget-button-click)
+	 ("<up>"           . widget-backward)
+	 ("<down>"         . nasy/wfw1))
+	:hook ((dashboard-mode-hook . (lambda () (gsetq-local tab-width 1)))
+	       (after-init-hook     . dashboard-setup-startup-hook))
+	:custom
+	(dashboard-org-agenda-categories . '("Calendar" "Tasks" "Appointments"))
+	`(dashboard-startup-banner       . ,(expand-file-name "n_icon.png" user-emacs-directory))
+	(dashboard-items . '((n-items . t)))
+			     ;; (bookmarks . t)))
+			     ;; (registers . 5)
+			     ;; (agenda    . 5)
+			     ;; (projects  . 7)))
+	(dashboard-item-generators . '((n-items   . nasy/-dashboard-items)))
+	((dashboard-center-content
+	  dashboard-show-shortcuts
+	  dashboard-set-heading-icons
+	  dashboard-set-file-icons
+	  dashboard-set-init-info
+	  show-week-agenda-p
+	  dashboard-set-navigator) . t)
 	:config
-	(dashboard-setup-startup-hook)
-	(setq dashboard-set-heading-icons t)
-	(setq dashboard-set-file-icons t)
-	(setq dashboard-banner-logo-title ";; Happy Hacking Keke , Emacs ❤ You ~"))
+	:init
+	(after-x 'all-the-icons
+	  (setq dashboard-navigator-buttons
+		`(;; line1
+		  ((,(all-the-icons-octicon "mark-github" :height 1.1 :v-adjust 0.0)
+		    "Source"
+		    "Source Page"
+		    (lambda (&rest _) (browse-url "https://github.com/keke-cute/.emacs.d")))
+		   (,(all-the-icons-octicon "gear" :height 1.1 :v-adjust 0.0)
+		    "Config"
+		    "Config File"
+		    (lambda (&rest _)
+		      (let ((upath (expand-file-name "custom/user-config.el" user-emacs-directory))
+			    (epath (expand-file-name "custom/user-config-example.el" user-emacs-directory)))
+			(when (and (file-exists-p epath)
+				  (not (file-exists-p upath)))
+			  (copy-file epath upath))
+			(find-file upath))))
+		   (,(all-the-icons-octicon "book" :height 1.1 :v-adjust 0.0)
+		    "Document"
+		    "Document Page"
+		    (lambda (&rest _) (browse-url "https://keke-cute.github.io/emacs.html"))))))))
+	;; :advice)
+	;; (:after dashboard-next-line     nasy/fw2)
+	;; (:after widget-forward          nasy/fw2)
+	;; (:after widget-backward         nasy/fw2))
+
+      (setq-default
+       initial-scratch-message     (concat ";; Happy hacking, " user-login-name " - Emacs ♥ you!\n\n")
+       dashboard-banner-logo-title (concat ";; Happy hacking, " user-login-name " - Emacs ♥ you!\n\n")
+       ;; initial-buffer-choice       #'(lambda () (get-buffer "*dashboard*"))  ;; It will cause error if you start emacs from Command line with file name
+										;; https://github.com/rakanalh/emacs-dashboard/issues/69
+      )
     #+end_src
 
 *** Minions
@@ -382,6 +507,7 @@
      (straight-use-package 'ivy)
      (straight-use-package 'swiper)
      (straight-use-package 'counsel)
+     (straight-use-package 'counsel-projectile)
      (straight-use-package 'ivy-posframe)
      (straight-use-package 'all-the-icons-ivy-rich)
 
@@ -437,6 +563,16 @@
      ;;   :config
      ;;   (selectrum-mode +1))
    #+end_src
+** Projectile
+   #+begin_src emacs-lisp
+     (straight-use-package 'projectile)
+
+     (leaf projectile
+       :config
+       (projectile-mode +1)
+       :bind-keymap
+       ("s-p" . projectile-command-map))
+   #+end_src
 ** Company
    #+begin_src emacs-lisp
      (straight-use-package 'company)
@@ -473,6 +609,17 @@
        (global-flycheck-mode))
    #+end_src
 
+** Which-key
+   #+begin_src emacs-lisp
+     (straight-use-package 'which-key)
+
+     (leaf which-key
+       :doc "Emacs package that displays available keybindings in popup."
+       :url "https://github.com/justbur/emacs-which-key"
+       :tag "help"
+       :custom (which-key-allow-imprecise-window-fit . nil)
+       :hook 'after-init-hook)
+   #+end_src
 ** Org-babel
    #+begin_src emacs-lisp
    (custom-set-variables
