--- a/readme.org
+++ b/readme.org
@@ -7,17 +7,28 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="me.css" /> <a href="index.html">Back To Home</a>
 * 包管理器与配置包(Straight.el & Leaf)
   #+begin_src emacs-lisp
+    ;; See https://github.com/raxod502/straight.el/issues/742. Remove this
+    ;; advice once that pull request is merged into master.
+    (define-advice straight--build-native-compile
+	(:around (oldfun &rest args) fix-native-comp-test)
+      "Properly disable native compilation on unsupported Emacsen."
+      (when (and (fboundp 'native-comp-available-p)
+		 (native-comp-available-p)
+		 (fboundp 'native-compile-async))
+	(apply oldfun args)))
+    ;;---------------------------------------------------------------------
+
     (defvar bootstrap-version)
     (let ((bootstrap-file
-           (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
-          (bootstrap-version 5))
+	   (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+	  (bootstrap-version 5))
       (unless (file-exists-p bootstrap-file)
-        (with-current-buffer
-            (url-retrieve-synchronously
-             "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
-             'silent 'inhibit-cookies)
-          (goto-char (point-max))
-          (eval-print-last-sexp)))
+	(with-current-buffer
+	    (url-retrieve-synchronously
+	     "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
+	     'silent 'inhibit-cookies)
+	  (goto-char (point-max))
+	  (eval-print-last-sexp)))
       (load bootstrap-file nil 'nomessage))
   #+end_src
 
