--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,7 @@
 #+title: 我的 Emacs 配置文件
 #+author: keke
 #+email: librek@protonmail.com
-#+date: <2021-05-08 Sat>
+#+date: <2021-05-23 Sun>
 #+export_file_name: ~/Repos/keke-cute.github.io/emacs.html
 #+options: creator:t author:t
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="me.css" /> <a href="index.html">Back To Home</a>
@@ -897,4 +897,8 @@
      (leaf go-mode
        :hook
        (go-mode-hook . lsp))
+   #+end_src
+** Nix
+   #+begin_src emacs-lisp
+     (straight-use-package 'nix-mode)
    #+end_src
