--- a/readme.org
+++ b/readme.org
@@ -876,15 +876,16 @@
 ** Hydra
    #+begin_src emacs-lisp
      (straight-use-package 'hydra)
-
-     (defhydra keke/main (global-map "<f12>")
-       "My main hydra keymap"
-       ("g" telega "Telegram")
-       ("m" magit-status "Git Status(Magit)")
-       ("b" counsel-bookmark "My Bookmarks")
-       ("f" counsel-projectile-find-file "Find Current Project File")
-       ("p" counsel-projectile-switch-project "Switch Project")
-       ("t" treemacs "Show Tree Style Files"))
+     (with-eval-after-load 'hydra
+       (defhydra keke/main (global-map "<f12>")
+	 "My main hydra keymap"
+	 ("a" ansi-term "Terminal")
+	 ("g" telega "Telegram")
+	 ("m" magit-status "Git Status(Magit)")
+	 ("b" counsel-bookmark "My Bookmarks")
+	 ("f" counsel-projectile-find-file "Find Current Project File")
+	 ("p" counsel-projectile-switch-project "Switch Project")
+	 ("t" treemacs "Show Tree Style Files")))
    #+end_src
 ** Treemacs
    #+begin_src emacs-lisp
